--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.config.import=file:env.properties
-spring.datasource.url=${DB_DATABASE}
+spring.datasource.url=jdbc:mysql://localhost:3306/diary
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
